--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,15 +5,10 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Setup LXD
-        uses: whywaita/setup-lxd@v1
-        with:
-          lxd_version: latest/stable
 
       - name: Install rockcraft
         run: |
