--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -2,8 +2,8 @@ name: Push (main)
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
     paths:
       - "rockcraft.yaml"
       - "files/**"
